Feature-wise: Added levels (Each level has multiple quizzes, which hold many questions) and visual feedback for quizzes
Added hyperlinks to questions on admin panel

Added Level model

Added correct options in the extra_context of the QuestionAnswer view

Made changes to HTML to accommodate changes

Made changes to databases based on migrations

--- a/quiz/templates/quiz/index.html
+++ b/quiz/templates/quiz/index.html
@@ -2,8 +2,11 @@
 {% load static %}
 
 {% block content %}
-	<div id="container">
-		<img src="{% static 'img/quiz.png' %}" class="w-100" >
+	<div id="container" class = "m-auto">
+		<div class = "w-100 text-center">
+			<div class = "fw-bold fs-5">Welcome to the QuizApp, {{ request.user.username }}!</div>
+			<div>Click here to play the quizzes</div>
+		</div>
 		<div class="text-center mt-2">
 			<a class="btn btn-lg px-5 btn-primary" href="{% url 'quiz:quizzes' %}">
 				View Quiz
