--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" >
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="{% static 'css/list-groups.css' %}" rel="stylesheet" >
 
     <title>Quiz App - {% block title %}{{title}}{% endblock title %}</title>
