Added multiple features 1. Posting mock database 2. Leaderboard system 3. Reward exchange system 4. Tracked play time for each session 5. Added dedicated scoring system (100* Ratio of remaining over full time *correct answers)

--- a/quiz/templates/quiz/user_quiz.html
+++ b/quiz/templates/quiz/user_quiz.html
@@ -13,7 +13,7 @@
     {% endif %}
     {% for user_quiz in quiz_list %}
         <div class="mb-3">
-            <a href="{% url 'quiz:quiz_detail' user_quiz.quiz.slug %}" class="text-decoration-none list-group-item py-3" aria-current="true">
+            <a href="{% url 'quiz:quiz_detail' user_quiz.quiz.slug %}" class="text-decoration-none  py-3" aria-current="true">
                 <div class="d-flex gap-2 w-100">
                     <div class = "flex-grow-1">
                         <div class="d-flex justify-content-between align-items-center">
@@ -27,16 +27,7 @@
                                     <span class="fa fa-star" id = "{{ user_quiz.quiz.slug|add:'-3-star' }}"></span>
                                     <span class="text-success">
                                 </div>
-                               
-                                    <!-- Score is {{request.user|quiz_user_score:user_quiz.quiz}} out of {{user_quiz.quiz.total_questions}} -->
-                                </span>
-                                <!-- {% if request.user|user_quiz_completed:user_quiz.quiz %}
-                                    <span class="text-success">
-                                        Score is {{request.user|quiz_user_score:user_quiz.quiz}} out of {{user_quiz.quiz.total_questions}}
-                                    </span>
-                                {% else %}
-                                    <span class="text-warning">Not Completed</span>
-                                {% endif %} -->
+                            </span>
                             </small>
                         </div>
                         <p class="mb-0 text-black-50 opacity-75">
