--- a/quiz/templates/quiz/quiz_question.html
+++ b/quiz/templates/quiz/quiz_question.html
@@ -15,20 +15,14 @@
             <h1 class="fs-4 text-danger text-center">{{messages }}</h1>
         {% else %}
             <p id="timer" class="mb-0 text-danger">Time left: .. <b>seconds</b></p>
-            <div class="d-flex justify-content-center">
-                <div class="list-group list-group-radio d-grid gap-2 border-0 mt-4 z-n1">
+            <div class="d-flex justify-content-center flex-column">
+                <input class="" type="hidden" value="" name="answer" id="selected-answer" >
+                <div class="d-grid gap-2 border-0 mt-4 z-n1">
                     {% for option in object.questionoptions_set.all %}
-                        <div class="position-relative">
-                            <input class="form-check-input position-absolute top-50 end-0 me-3 fs-5" type="radio" value="{{option.pk}}" name="answer" id="option-{{option.pk}}">
-                            <label class="list-group-item py-3 pe-5" for="option-{{option.pk}}">
+                        <div class="p-4 border" onclick="submitForm('{{ option.pk }}')" id="option-{{option.pk}}" style = "cursor:pointer">
                                 <strong class="fw-semibold">{{option.option}}</strong>
-                            </label>
                         </div>
                     {% endfor %}
-                    <div class="mt-3">
-                        <input id = "submitBtn" type="submit" value="Submit" class="btn btn-primary px-5 fs-5 col-12">
-                        
-                    </div>
                 </div>
             </div>
             <div id = "feedback-correct" class = "text-white fw-bold position-fixed vw-100 vh-100 top-0 start-0" style = "z-index: 2; background-color: rgb(0,0,0,0.1); display:none">
@@ -63,16 +57,24 @@
             const formData = new FormData(questionForm);
             let isCorrect = '{{ correct_answer  }}' === 'True';  
             let isAnswered = '{{ correct_answer  }}' !== '';    
+            let time = parseInt('{{object.time}}');
+            
+            function submitForm(answerValue) {
+                document.getElementById('selected-answer').value = answerValue;
+                const event = new Event('submit', {
+                    'bubbles': true, 
+                    'cancelable': true
+                });
+                document.getElementById("question-form").dispatchEvent(event);
+            }
 
             document.getElementById("question-form").onsubmit = (event) => {
-                event.preventDefault();  // Prevent the form from submitting immediately
-                let selectedOption = document.querySelector('input[name="answer"]:checked');
-                const selectedAnswer = document.querySelector(`label[for="option-${selectedOption.value}"]`).textContent.trim();
-
+                event.preventDefault();  
+                const selectedOption = document.getElementById('selected-answer').value;
+                const selectedAnswer = document.getElementById(`option-${selectedOption}`).querySelector("strong").textContent.trim();
                 const correctAnswerText = '{{ correct_option_text }}'.trim();  
-
                 const isCorrect = selectedAnswer === correctAnswerText;
-                const isAnswered = selectedAnswer !== '';             
+                const isAnswered = selectedOption.value !== '';             
 
                 if (isAnswered) {
                     let color = isCorrect ? "green" : "red";  
@@ -88,10 +90,23 @@
                         event.target.submit();  
                     }, 2000);  
                 }
+
+                else {
+                    let color = "red";  
+                    let audio = "wrong.mp3";
+                    let feedback = "feedback-wrong";
+                    let body = document.getElementById("body");
+                    document.getElementById(feedback).style.display = "flex";
+                    var audioUrl = "{% static 'audio/' %}" + audio;
+                    let sound = new Audio(audioUrl);
+                    sound.play();
+                    setTimeout(() => {
+                        document.getElementById("question-form").submit();  
+                    }, 2000);   
+                }
             };        
 
             document.addEventListener("DOMContentLoaded", function(event) {
-                let time = parseInt('{{object.time}}');
                 const timer = document.getElementById("timer");
 
                 // Display the initial timer value as soon as the page loads
@@ -112,48 +127,26 @@
                         timer_str = `Time left: <b>${time} seconds</b>`;
                     }
 
-                    if (time < 0) {
+                    if (time <= 0) {
                         clearInterval(x);
                         timer_str = "<b>Time's up!</b>";
-                        let selectedOption = document.querySelector('input[name="answer"]:checked');
-                        if(selectedOption) {
-                            const selectedAnswer = document.querySelector(`label[for="option-${selectedOption.value}"]`).textContent.trim();
-                            const correctAnswerText = '{{ correct_option_text }}'.trim();  
-                            const isCorrect = selectedAnswer === correctAnswerText;
-                            let color = isCorrect ? "green" : "red";  
-                            let audio = isCorrect ? "correct1.mp3" : "wrong.mp3";
-                            let feedback = isCorrect ? "feedback-correct" : "feedback-wrong";
-                            let body = document.getElementById("body");
-                            document.getElementById(feedback).style.display = "flex";
-                            var audioUrl = "{% static 'audio/' %}" + audio;
-                            let sound = new Audio(audioUrl);
-                            sound.play();
-                            setTimeout(() => {
-                                document.getElementById("question-form").submit();  
-                            }, 2000);  
-                        }
-                        else {
-                            let color = "red";  
-                            let audio = "wrong.mp3";
-                            let feedback = "feedback-wrong";
-                            let body = document.getElementById("body");
-                            document.getElementById(feedback).style.display = "flex";
-                            var audioUrl = "{% static 'audio/' %}" + audio;
-                            let sound = new Audio(audioUrl);
-                            sound.play();
-                            setTimeout(() => {
-                                document.getElementById("question-form").submit();  
-                            }, 2000);  
-                        }
-                        
-                        
+                        let color = "red";  
+                        let audio = "wrong.mp3";
+                        let feedback = "feedback-wrong";
+                        let body = document.getElementById("body");
+                        document.getElementById(feedback).style.display = "flex";
+                        var audioUrl = "{% static 'audio/' %}" + audio;
+                        let sound = new Audio(audioUrl);
+                        sound.play();
+                        setTimeout(() => {
+                            document.getElementById("question-form").submit();  
+                        }, 2000);  
                     }
 
                     timer.innerHTML = timer_str;
                 }, 1000);  // Adjusted to 1000ms for a smoother countdown
             });
 
-              
         </script>
     {% endif %}
     
