Fix the front end design of the levels and quizzes, as well as the reward handling logic

--- a/quiz/templates/quiz/leaderboard.html
+++ b/quiz/templates/quiz/leaderboard.html
@@ -5,7 +5,7 @@
     {% csrf_token %}
     <div>
         <div class = "h1">Leaderboard</div>
-        <table>
+        <table class = "table">
             <thead>
                 <tr>
                     <th>ID</th>
