--- a/quiz/templates/quiz/reward.html
+++ b/quiz/templates/quiz/reward.html
@@ -25,10 +25,10 @@
                     <td class="align-middle">{{ item.exchanged_points }}</td>
                     <td class="align-middle">{{ item.quantity }}</td>
                     <td>
-                        <form name="rewardForm" method="post">
+                        <form id = "rewardForm" name="rewardForm" method="post">
                             {% csrf_token %}
                             <input type="hidden" name="reward_id" value="{{ item.id }}">
-                            <button type="button" class="btn btn-outline-primary" onclick="submitReward('{{ item.id }}')">Exchange</button>
+                            <button type="button" class="btn btn-outline-primary" onclick="submitReward(event, '{{ item.id }}', '{{ item.exchanged_points }}', '{{ user_score }}')">Exchange</button>
                         </form>
                     </td>
                 </tr>
@@ -48,16 +48,16 @@
 <script type="text/javascript">
     function submitReward(event, rewardId, item_score, score) {
         event.preventDefault()
-        const form = document.getElementById("reward-form");
+        const rewardForm = document.getElementById("rewardForm");
         const input = document.createElement("input");
         input.type = "hidden";
         input.name = "reward_id";
         input.value = rewardId;
-               
+
         if(score >= item_score) {
-            alert("Congratulations! Enjoy your reward!" )
-            form.appendChild(input);
-            form.submit();
+            alert("Congratulations! Contact your teacher to receive your reward and please enjoy your prize :)" )
+            rewardForm.appendChild(input);
+            rewardForm.submit();
         }
         else {
             alert("Sorry, you do not have enough scores." )
