--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
             <a href="{% url 'quiz:index' %}" class="navbar-brand text-white fw-bold fs-4 ">Quiz App</a>
             <div class="d-flex my-auto">
               {% if not request.user.is_authenticated %}
-                <a class="btn btn-sm btn-primary" href="{% url 'login' %}">Login</a>
+                <!-- <a class="btn btn-sm btn-primary" href="{% url 'login' %}">Login</a> -->
               {% else %}
                 <a class="btn btn-sm btn-link text-decoration-none fw-bold text-white" href="{% url 'quiz:reward' %}">Reward</a>
                 <a class="btn btn-sm btn-link text-decoration-none fw-bold text-white" href="{% url 'quiz:leaderboard' %}">Leaderboard</a>
