--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
               {% else %}
                 <a class="btn btn-sm btn-link text-decoration-none fw-bold text-white" href="{% url 'quiz:reward' %}">Reward</a>
                 <a class="btn btn-sm btn-link text-decoration-none fw-bold text-white" href="{% url 'quiz:leaderboard' %}">Leaderboard</a>
-                <a class="btn btn-sm btn-link text-decoration-none fw-bold text-white" href="{% url 'quiz:quizzes' %}">Quizzes</a>
+                <a class="btn btn-sm btn-link text-decoration-none fw-bold text-white" href="{% url 'quiz:quizzes' %}">Levels</a>
                 <a class="btn btn-sm btn-link text-decoration-none fw-bold text-white" href="{% url 'quiz:user_quizzes' %}">History</a>
                 <form action="{% url 'logout' %}" method="post">
                   {% csrf_token %}
